added gap to the left of the image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar sticky-top navbar-light bg-light">
   <span class="navbar-brand">
-    <img src="assets/icon_check_list.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" style="margin-right: 10px;">
+    <img src="assets/icon_check_list.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" style="margin-right: 10px; margin-left: 10px;">
     D2TARA Self-Assessment Tool
   </span>
 </nav>
+
 
 <br>
 <div class="container-fluid">
