changed app appearance

--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,6 +1,5 @@
 
-  <button class="btn btn-sm btn-outline-primary me-2" (click)="accordion.expandAll()">Expand all</button>
-  <button class="btn btn-sm btn-outline-primary me-2" (click)="accordion.collapseAll()">Collapse all</button>
+Data-Driven TARA Sections:
 
   <hr />
 
